tests/unit/response_parsing/xml/responses/ec2-describe-route-tables.json
{
    "requestId": "0a0c3fc4-1246-463b-b276-2823b5bc38e6", 
    "RouteTables": [
        {
            "Associations": [
                {
                    "SubnetId": "subnet-812910e8", 
                    "RouteTableAssociationId": "rtbassoc-822019eb", 
                    "RouteTableId": "rtb-2728114e"
                }
            ], 
            "RouteTableId": "rtb-2728114e", 
            "VpcId": "vpc-8d2910e4", 
            "PropagatingVgws": [], 
            "Tags": [], 
            "Routes": [
                {
                    "GatewayId": "local", 
                    "DestinationCidrBlock": "10.0.0.0/16", 
                    "State": "active"
                }, 
                {
                    "GatewayId": "igw-6228110b", 
                    "DestinationCidrBlock": "0.0.0.0/0", 
                    "State": "active"
                }
            ]
        }, 
        {
            "Associations": [
                {
                    "RouteTableAssociationId": "rtbassoc-8e2910e7", 
                    "Main": true, 
                    "RouteTableId": "rtb-8f2910e6"
                }
            ], 
            "RouteTableId": "rtb-8f2910e6", 
            "VpcId": "vpc-8d2910e4", 
            "PropagatingVgws": [], 
            "Tags": [], 
            "Routes": [
                {
                    "GatewayId": "local", 
                    "DestinationCidrBlock": "10.0.0.0/16", 
                    "State": "active"
                }
            ]
        }
    ]
}
